--- a/app/templates/app/single-page.html
+++ b/app/templates/app/single-page.html
@@ -1,7 +1,7 @@
 {% extends "app/base.html" %}
 {% load static %}
 {% block title %} Page Title {% endblock %}
-{% block body  %}
+{% block body %}
 
 
 <section class="call-action overlay" data-stellar-background-ratio="0.5">
@@ -9,10 +9,11 @@
         <div class="row">
             <div class="col-lg-12 col-md-12 col-12">
                 <div class="content">
-                    <h2>Do you need Emergency Medical Care? Call @ 1234 56789</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque porttitor dictum turpis nec gravida.</p>
+                    <h2>Women Health Care</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque porttitor dictum turpis nec
+                        gravida.</p>
                     <div class="button">
-                        <a href="#" class="btn">Contact Now</a>
+                        <a href="#" class="btn">Get Appointment</a>
                         <a href="#" class="btn second">Learn More<i class="fa fa-long-arrow-right"></i></a>
                     </div>
                 </div>
@@ -20,6 +21,34 @@
         </div>
     </div>
 </section>
+
+<div class="container my-3">
+    <p> uiduiui women health ihsc hionklndih huihsuihn
+    </p>
+</div>
+
+<div class="container my-4">
+    <h3 class="text-center">Women health care Services</h3>
+    <div class="row">
+        <div class="col-lg-5">
+            <div class="text">
+                <h4>We Provide Medical Services</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sed nisl pellentesque, faucibus
+                    libero eu, gravida quam. </p>
+                <div class="button text-white">
+                    <a href="#" class="btn">Schedule Appointment</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-7">
+
+        </div>
+        </div>
+
+    </div>
+</div>
+
+
 
 
 
@@ -35,9 +64,9 @@
 
 
 {% for i in obj %}
-  <p>{{i.page_title}}
-  </p>
+<p>{{i.page_title}}
+</p>
 {% endfor %}
 
 
-{% endblock  %}
+{% endblock %}
