Single Page Backend done

--- a/admin_panel/templates/admin_panel/pages.html
+++ b/admin_panel/templates/admin_panel/pages.html
@@ -8,18 +8,20 @@
   <table class="table table-hover">
     <thead>
         <tr>
+            <th>Sr.</th>
             <th>Title</th>
             <th>Discription</th>
-            <th>Office</th>
+            <th>Published on</th>
             <th>Action</th>
         </tr>
     </thead>
     <tbody>  
         {% for page in pages %}
         <tr>
-            <td>{{page.page_title | truncatewords:5}}</td>
-            <td>{{page.page_discription | truncatewords:5}}</td>
-            <td>{{page.page_url | truncatewords:5}}</td>
+            <td>{{page.id}}</td>
+            <td>{{page.title | truncatewords:5}}</td>
+            <td>{{page.discription | truncatewords:5}}</td>
+            <td>{{page.published_date}}</td>
             <td>
                 <a href="{% url 'edit-page' page.pk %}"><i class="fas fa-edit"></i>
                 </a>
