Front-end Single pages

--- a/app/templates/app/single-page.html
+++ b/app/templates/app/single-page.html
@@ -22,21 +22,64 @@
  </section>
 
  <div class="container my-3">
-    <h2 class="my-3" >{{pagedetail.h2}}
-    </h2>
+    <h2 class="pt-5" >{{pagedetail.h2}}</h2>
+    <hr class="col-md-1">
     <p> {{pagedetail.content}}
     </p>
  </div>
+ <section class="portfolio section" >
+    <h4 class="text-center py-3">Intensive Care Inside Hospital</h4>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-12 col-12">
+                <div class="owl-carousel portfolio-slider">
+                    <div class="single-pf">
+                        <img src="{% static "img/pf1.jpg" %}" alt="#">
+                        <a href="portfolio-details.html" class="btn">View Details</a>
+                    </div>
+                    <div class="single-pf">
+                        <img src="{% static "img/pf2.jpg" %}" alt="#">
+                        <a href="portfolio-details.html" class="btn">View Details</a>
+                    </div>
+                    <div class="single-pf">
+                        <img src="{% static "img/pf3.jpg" %}" alt="#">
+                        <a href="portfolio-details.html" class="btn">View Details</a>
+                    </div>
+                    <div class="single-pf">
+                        <img src="{% static "img/pf4.jpg" %}" alt="#">
+                        <a href="portfolio-details.html" class="btn">View Details</a>
+                    </div>
+                    <div class="single-pf">
+                        <img src="{% static "img/pf1.jpg" %}" alt="#">
+                        <a href="portfolio-details.html" class="btn">View Details</a>
+                    </div>
+                    <div class="single-pf">
+                        <img src="{% static "img/pf2.jpg" %}" alt="#">
+                        <a href="portfolio-details.html" class="btn">View Details</a>
+                    </div>
+                    <div class="single-pf">
+                        <img src="{% static "img/pf3.jpg" %}" alt="#">
+                        <a href="portfolio-details.html" class="btn">View Details</a>
+                    </div>
+                    <div class="single-pf">
+                        <img src="{% static "img/pf4.jpg" %}" alt="#">
+                        <a href="portfolio-details.html" class="btn">View Details</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
  
  <div class="container my-4">
-    <h3 class="text-center">{{pagedetail.h3}}</h3>
+    <h3 class="text-center text-primary pt-5">{{pagedetail.h3}}</h3>
     <div class="row">
-        <div class="col-lg-7 p-4">
+        <div class="col-lg-7 pt-5">
             <div class="text">
                 <h4>{{pagedetail.h4}}</h4>
-                <p>{{pagedetail.second_content}} </p>
+                <p class="py-4" >{{pagedetail.second_content}} </p>
                 <div class="button text-white">
-                    <a href="#" class="btn">Schedule Appointment</a>
+                    <a href="#" class="btn btn primary">Schedule Appointment</a>
                 </div>
             </div>
         </div>
