--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %} {% endblock %} </title>
     <!-- Favicon -->
-    <link rel="icon" href="img/favicon.png">
+    <link rel="icon" href="{% static 'img/favicon.png' %}">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Poppins:200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet">
     <!-- Bootstrap CSS -->
@@ -35,22 +35,6 @@
     <link rel="stylesheet" href="{% static 'css/responsive.css' %}">
 </head>
 <body>
-    
-<!-- Get Pro Button -->
-<ul class="pro-features">
-    <a class="get-pro" href="#">Get Pro</a>
-    <li class="big-title">Pro Version Available on Themeforest</li>
-    <li class="title">Pro Version Features</li>
-    <li>2+ premade home pages</li>
-    <li>20+ html pages</li>
-    <li>Color Plate With 12+ Colors</li>
-    <li>Sticky Header / Sticky Filters</li>
-    <li>Working Contact Form With Google Map</li>
-    <div class="button">
-        <a href="http://preview.themeforest.net/item/mediplus-medical-and-doctor-html-template/full_screen_preview/26665910?_ga=2.145092285.888558928.1591971968-344530658.1588061879" target="_blank" class="btn">Pro Version Demo</a>
-        <a href="https://themeforest.net/item/mediplus-medical-and-doctor-html-template/26665910" target="_blank" class="btn">Buy Pro Version</a>
-    </div>
-</ul>
 
 <!-- Header Area -->
 <header class="header" >
@@ -88,7 +72,7 @@
                     <div class="col-lg-3 col-md-3 col-12">
                         <!-- Start Logo -->
                         <div class="logo">
-                            <a href="index.html"><img src="img/logo.png" alt="#"></a>
+                            <a href="/"><img src="{% static 'img/logo.png'%}" alt="#"></a>
                         </div>
                         <!-- End Logo -->
                         <!-- Mobile Nav -->
@@ -100,16 +84,15 @@
                         <div class="main-menu">
                             <nav class="navigation">
                                 <ul class="nav menu">
-                                    <li class="active"><a href="#">Home <i class="icofont-rounded-down"></i></a>
-                                        <ul class="dropdown">
-                                            <li><a href="index.html">Home Page 1</a></li>
-                                        </ul>
+                                    <li class="active"><a href="/">Home <i class="icofont-rounded-down"></i></a>
                                     </li>
                                     <li><a href="#">Doctos </a></li>
                                     <li><a href="#">Services </a></li>
-                                    <li><a href="#">Pages <i class="icofont-rounded-down"></i></a>
+                                    <li><a href="#">Treatments <i class="icofont-rounded-down"></i></a>
                                         <ul class="dropdown">
-                                            <li><a href="404.html">404 Error</a></li>
+										    {% for i in pages %}	
+                                                <li><a href="/">{{i.title}}</a></li>
+										    {% endfor %}
                                         </ul>
                                     </li>
                                     <li><a href="#">Blogs <i class="icofont-rounded-down"></i></a>
