--- a/admin_panel/templates/admin_panel/edit-page.html
+++ b/admin_panel/templates/admin_panel/edit-page.html
@@ -1,8 +1,11 @@
 {% extends "admin_panel/base.html"%}
-{% block title %} Add New Service {% endblock %}
+{% block title %} Admin Panel | Wesite platform {% endblock %}
 {% block body %}  
+
+
+
 <div class="container">
-    <h1>Create....</h1>
+    <h1>Edit Page</h1>
     <form action="" method="POST">
       {%csrf_token%}
       {{form.as_p}}
@@ -10,5 +13,6 @@
       <input class="btn btn-primary my-5" type="submit">
 
     </form>
+
   </div>
 {% endblock %}
