--- a/admin_panel/templates/admin_panel/edit-card.html
+++ b/admin_panel/templates/admin_panel/edit-card.html
@@ -5,7 +5,7 @@
 
 
 <div class="container">
-    <h1>Edit HomePage Content</h1>
+    <h1>Edit Card</h1>
     <form action="" method="POST">
       {%csrf_token%}
       {{form.as_p}}
