--- a/admin_panel/templates/admin_panel/list-page.html
+++ b/admin_panel/templates/admin_panel/list-page.html
@@ -8,26 +8,26 @@
       <table class="table table-hover">
         <thead>
             <tr>
-                <th>Doctor's Name</th>
-                <th>Service Title</th>
-                <th>Day From</th>
-                <th>Day To</th>
-                <th>Hour From</th>
-                <th>Hour To</th>
+                <th>Sr.</th>
+                <th>Page Title</th>
+                <th>Publisehd on</th>
                 <th>Action</th>
             </tr>
         </thead>
         <tbody>  
-            {% for i in cards %}
+            {% for i in pages %}
             <tr>
-                <td>{{i.Doctor_name}}</td>
+                <td>{{i.id}}</td>
                 <td>{{i.title }}</td>
-                <td>{{i.working_day_from }}</td>
-                <td>{{i.working_day_to }}</td>
-                <td>{{i.working_hour_from }}</td>
-                <td>{{i.working_hour_to }}</td>
+                <td>{{i.discription}}</td>
+                <td>{{i.published_date }}</td>
+    
                 <td class="text-center" >
-                    <a href="{% url 'edit-card' i.pk %}"><i class="fas fa-edit"></i>
+                    <a href="{% url 'edit-page' i.pk %}"><i class="fas fa-edit"></i>
+                    </a>
+                </td>
+                <td class="text-center" >
+                    <a href="{% url 'delete-page' i.pk %}"><i class="fas fa-edit"></i>
                     </a>
                 </td>
             </tr>  
