Appointment Booking d=from user side Done

--- a/admin_panel/templates/admin_panel/add-appointment.html
+++ b/admin_panel/templates/admin_panel/add-appointment.html
@@ -1,5 +1,5 @@
 {% extends "admin_panel/base.html"%}
-{% block title %} Add New Service {% endblock %}
+{% block title %} Add New Apointment  {% endblock %}
 {% block body %}  
 <div class="container">
     <h1>Create....</h1>
