--- a/admin_panel/templates/admin_panel/base.html
+++ b/admin_panel/templates/admin_panel/base.html
@@ -91,22 +91,11 @@
           <div class="sidebar-heading">
               Basic
           </div>
-
-          <!-- Nav Item - Pages Collapse Menu -->
-          <li class="nav-item">
-            <a class="nav-link collapsed" href="{% url 'appointment-list' %}" data-toggle="collapse" data-target="#collapseBasic"
-                aria-expanded="true" aria-controls="#collapseBasic">
-                <i class="fas fa-fw fa-wrench"></i>
-                <span>Appointments</span>
-            </a>
-        </li>
-
-
           <!-- Nav Item - Tables -->
           <li class="nav-item">
-              <a class="nav-link" href="#">
+              <a class="nav-link" href="{% url 'appointment-list' %}">
                   <i class="fas fa-fw fa-table"></i>
-                  <span>Updates</span></a>
+                  <span>Appointments</span></a>
           </li>
 
           <!-- Divider -->
