--- a/admin_panel/templates/admin_panel/list-appointment.html
+++ b/admin_panel/templates/admin_panel/list-appointment.html
@@ -1,10 +1,10 @@
 {% extends "admin_panel/base.html"%}
-{% block title %} Pages {% endblock %}
+{% block title %} Appointments {% endblock %}
 {% block body %} 
 
 <div class="container">
-<h2>Pages List</h2>
-<a class="btn btn-primary" style="margin-left: 85%;" href="{% url 'add-page' %}"> <i class="fa-solid fa-plus"></i>Add Page</a>
+<h2>Appointments</h2>
+<a class="btn btn-primary" style="margin-left: 85%;" href="{% url 'add-appointment' %}"> <i class="fa-solid fa-plus"></i>Add New</a>
   <table class="table table-hover">
     <thead>
         <tr>
