--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -1,8 +1,9 @@
 {% extends "app/base.html" %}	
 {% block title %}Mediplus - Medical and Doctor temisj.{% endblock %}
 {% block body %}
-{% load static %}		
-		
+{% load static %}	
+
+{% for i in homepagecontent %}	
 		<!-- Slider Area -->
 		<section class="slider">
 			<div class="hero-slider">
@@ -146,8 +147,8 @@
 							<div class="signle-icon">
 								<i class="icofont icofont-ambulance-cross"></i>
 							</div>
-							<h3>Emergency Help</h3>
-							<p>Lorem ipsum sit, consectetur adipiscing elit. Maecenas mi quam vulputate.</p>
+							<h3>{{i.help_box_1_h5}}</h3>
+							<p>{{i.help_box_1}}.</p>
 						</div>
 						<!-- End Single features -->
 					</div>
@@ -157,8 +158,8 @@
 							<div class="signle-icon">
 								<i class="icofont icofont-medical-sign-alt"></i>
 							</div>
-							<h3>Enriched Pharmecy</h3>
-							<p>Lorem ipsum sit, consectetur adipiscing elit. Maecenas mi quam vulputate.</p>
+							<h3>{{i.help_box_2_h5}}</h3>
+							<p>{{i.help_box_2}}.</p>
 						</div>
 						<!-- End Single features -->
 					</div>
@@ -168,8 +169,8 @@
 							<div class="signle-icon">
 								<i class="icofont icofont-stethoscope"></i>
 							</div>
-							<h3>Medical Treatment</h3>
-							<p>Lorem ipsum sit, consectetur adipiscing elit. Maecenas mi quam vulputate.</p>
+							<h3>{{i.help_box_3_h5}}</h3>
+							<p>{{i.help_box_3}}.</p>
 						</div>
 						<!-- End Single features -->
 					</div>
@@ -187,7 +188,7 @@
 						<div class="single-fun">
 							<i class="icofont icofont-home"></i>
 							<div class="content">
-								<span class="counter">3468</span>
+								<span class="counter">{{i.hospital_rooms}}</span>
 								<p>Hospital Rooms</p>
 							</div>
 						</div>
@@ -198,7 +199,7 @@
 						<div class="single-fun">
 							<i class="icofont icofont-user-alt-3"></i>
 							<div class="content">
-								<span class="counter">557</span>
+								<span class="counter">{{i.specialist_doctors}}</span>
 								<p>Specialist Doctors</p>
 							</div>
 						</div>
@@ -209,7 +210,7 @@
 						<div class="single-fun">
 							<i class="icofont-simple-smile"></i>
 							<div class="content">
-								<span class="counter">4379</span>
+								<span class="counter">{{i.happy_patient}}</span>
 								<p>Happy Patients</p>
 							</div>
 						</div>
@@ -220,7 +221,7 @@
 						<div class="single-fun">
 							<i class="icofont icofont-table"></i>
 							<div class="content">
-								<span class="counter">32</span>
+								<span class="counter">{{i.years_of_experience}}</span>
 								<p>Years of Experience</p>
 							</div>
 						</div>
@@ -237,7 +238,7 @@
 				<div class="row">
 					<div class="col-lg-12">
 						<div class="section-title">
-							<h2>We Offer Different Services To Improve Your Health</h2>
+							<h2>{{i.about_h3}}</h2>
 							<img src="{% static "img/section-img.png" %}" alt="#">
 							<p>Lorem ipsum dolor sit amet consectetur adipiscing elit praesent aliquet. pretiumts</p>
 						</div>
@@ -248,24 +249,7 @@
 						<!-- Start Choose Left -->
 						<div class="choose-left">
 							<h3>Who We Are</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pharetra antege vel est lobortis, a commodo magna rhoncus. In quis nisi non emet quam pharetra commodo. </p>
-							<p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. </p>
-							<div class="row">
-								<div class="col-lg-6">
-									<ul class="list">
-										<li><i class="fa fa-caret-right"></i>Maecenas vitae luctus nibh. </li>
-										<li><i class="fa fa-caret-right"></i>Duis massa massa.</li>
-										<li><i class="fa fa-caret-right"></i>Aliquam feugiat interdum.</li>
-									</ul>
-								</div>
-								<div class="col-lg-6">
-									<ul class="list">
-										<li><i class="fa fa-caret-right"></i>Maecenas vitae luctus nibh. </li>
-										<li><i class="fa fa-caret-right"></i>Duis massa massa.</li>
-										<li><i class="fa fa-caret-right"></i>Aliquam feugiat interdum.</li>
-									</ul>
-								</div>
-							</div>
+							<p>{{i.about_content}} </p>
 						</div>
 						<!-- End Choose Left -->
 					</div>
@@ -298,8 +282,8 @@
 				<div class="row">
 					<div class="col-lg-12 col-md-12 col-12">
 						<div class="content">
-							<h2>Do you need Emergency Medical Care? Call @ 1234 56789</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque porttitor dictum turpis nec gravida.</p>
+							<h2>{{i.emergency_section_h3}}</h2>
+							<p>{{i.emergency_section_content}}</p>
 							<div class="button">
 								<a href="#" class="btn">Contact Now</a>
 								<a href="#" class="btn second">Learn More<i class="fa fa-long-arrow-right"></i></a>
@@ -460,19 +444,12 @@
 								<div class="icon">
 									<i class="icofont icofont-ui-cut"></i>
 								</div>
-								<h4 class="title">Plastic Suggery</h4>
+								<h4 class="title">{{i.batch_1_heading}}</h4>
 								<div class="price">
-									<p class="amount">$199<span>/ Per Visit</span></p>
+									<p class="amount">${{i.batch_1_price}}<span>/ Per Visit</span></p>
 								</div>	
 							</div>
-							<!-- Table List -->
-							<ul class="table-list">
-								<li><i class="icofont icofont-ui-check"></i>Lorem ipsum dolor sit</li>
-								<li><i class="icofont icofont-ui-check"></i>Cubitur sollicitudin fentum</li>
-								<li class="cross"><i class="icofont icofont-ui-close"></i>Nullam interdum enim</li>
-								<li class="cross"><i class="icofont icofont-ui-close"></i>Donec ultricies metus</li>
-								<li class="cross"><i class="icofont icofont-ui-close"></i>Pellentesque eget nibh</li>
-							</ul>
+							<p>{{i.batch_1_content}}</p>
 							<div class="table-bottom">
 								<a class="btn" href="#">Book Now</a>
 							</div>
@@ -488,19 +465,12 @@
 								<div class="icon">
 									<i class="icofont icofont-tooth"></i>
 								</div>
-								<h4 class="title">Teeth Whitening</h4>
+								<h4 class="title">{{i.batch_2_heading}}</h4>
 								<div class="price">
-									<p class="amount">$299<span>/ Per Visit</span></p>
+									<p class="amount">${{i.batch_2_price}}<span>/ Per Visit</span></p>
 								</div>	
 							</div>
-							<!-- Table List -->
-							<ul class="table-list">
-								<li><i class="icofont icofont-ui-check"></i>Lorem ipsum dolor sit</li>
-								<li><i class="icofont icofont-ui-check"></i>Cubitur sollicitudin fentum</li>
-								<li><i class="icofont icofont-ui-check"></i>Nullam interdum enim</li>
-								<li class="cross"><i class="icofont icofont-ui-close"></i>Donec ultricies metus</li>
-								<li class="cross"><i class="icofont icofont-ui-close"></i>Pellentesque eget nibh</li>
-							</ul>
+							<p>{{i.batch_2_content}}</p>
 							<div class="table-bottom">
 								<a class="btn" href="#">Book Now</a>
 							</div>
@@ -516,19 +486,12 @@
 								<div class="icon">
 									<i class="icofont-heart-beat"></i>
 								</div>
-								<h4 class="title">Heart Suggery</h4>
+								<h4 class="title">{{i.batch_3_heading}}</h4>
 								<div class="price">
-									<p class="amount">$399<span>/ Per Visit</span></p>
+									<p class="amount">${{i.batch_3_price}}<span>/ Per Visit</span></p>
 								</div>	
 							</div>
-							<!-- Table List -->
-							<ul class="table-list">
-								<li><i class="icofont icofont-ui-check"></i>Lorem ipsum dolor sit</li>
-								<li><i class="icofont icofont-ui-check"></i>Cubitur sollicitudin fentum</li>
-								<li><i class="icofont icofont-ui-check"></i>Nullam interdum enim</li>
-								<li><i class="icofont icofont-ui-check"></i>Donec ultricies metus</li>
-								<li><i class="icofont icofont-ui-check"></i>Pellentesque eget nibh</li>
-							</ul>
+							<p>{{i.batch_3_content}}</p>
 							<div class="table-bottom">
 								<a class="btn" href="#">Book Now</a>
 							</div>
@@ -540,90 +503,6 @@
 			</div>	
 		</section>	
 		<!--/ End Pricing Table -->
-		
-		
-		<!-- Start Appointment -->
-		<section class="appointment">
-			<div class="container">
-				<h2 class='text-center' >We Are Always Ready to Help You. Book An Appointment</h2>
-				<div class="row">
-					<div class="col-lg-6 col-md-12 col-12">
-						<form class="form" action="#">
-							<div class="row">
-								<div class="col-lg-6 col-md-6 col-12">
-									<div class="form-group">
-										<input name="name" type="text" placeholder="Name">
-									</div>
-								</div>
-								<div class="col-lg-6 col-md-6 col-12">
-									<div class="form-group">
-										<input name="email" type="email" placeholder="Email">
-									</div>
-								</div>
-								<div class="col-lg-6 col-md-6 col-12">
-									<div class="form-group">
-										<input name="phone" type="text" placeholder="Phone">
-									</div>
-								</div>
-								<div class="col-lg-6 col-md-6 col-12">
-									<div class="form-group">
-										<div class="nice-select form-control wide" tabindex="0"><span class="current">Department</span>
-											<ul class="list">
-												<li data-value="1" class="option selected ">Department</li>
-												<li data-value="2" class="option">Cardiac Clinic</li>
-												<li data-value="3" class="option">Neurology</li>
-												<li data-value="4" class="option">Dentistry</li>
-												<li data-value="5" class="option">Gastroenterology</li>
-											</ul>
-										</div>
-									</div>
-								</div>
-								<div class="col-lg-6 col-md-6 col-12">
-									<div class="form-group">
-										<div class="nice-select form-control wide" tabindex="0"><span class="current">Doctor</span>
-											<ul class="list">
-												<li data-value="1" class="option selected ">Doctor</li>
-												<li data-value="2" class="option">Dr. Akther Hossain</li>
-												<li data-value="3" class="option">Dr. Dery Alex</li>
-												<li data-value="4" class="option">Dr. Jovis Karon</li>
-											</ul>
-										</div>
-									</div>
-								</div>
-								<div class="col-lg-6 col-md-6 col-12">
-									<div class="form-group">
-										<input type="text" placeholder="Date" id="datepicker">
-									</div>
-								</div>
-								<div class="col-lg-12 col-md-12 col-12">
-									<div class="form-group">
-										<textarea name="message" placeholder="Write Your Message Here....."></textarea>
-									</div>
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-lg-5 col-md-4 col-12">
-									<div class="form-group">
-										<div class="button">
-											<button type="submit" class="btn">Book An Appointment</button>
-										</div>
-									</div>
-								</div>
-								<div class="col-lg-7 col-md-8 col-12">
-									<p>( We will be confirm by an Text Message )</p>
-								</div>
-							</div>
-						</form>
-					</div>
-					<div class="col-lg-6 col-md-12 ">
-						<div class="appointment-image">
-							<img src="{% static 'img/contact-img.png' %}" alt="#">
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		<!-- End Appointment -->
 		
 		<!-- Start Newsletter Area -->
 		<section class="newsletter section">
@@ -653,4 +532,7 @@
 		</section>
 		<!-- /End Newsletter Area -->
 		
+{% endfor %}	
+		
+
 {% endblock %}
