Done with Ck editor

--- a/admin_panel/templates/admin_panel/add-page.html
+++ b/admin_panel/templates/admin_panel/add-page.html
@@ -5,7 +5,7 @@
     <h1>Login</h1>
     <form action="" method="POST">
       {%csrf_token%}
-      {{form.as_p}}
+      {{form}}
       
       <input class="btn btn-primary my-5" type="submit">
 
