--- a/admin_panel/templates/admin_panel/base.html
+++ b/admin_panel/templates/admin_panel/base.html
@@ -338,5 +338,8 @@
     <script src="{% static 'js/demo/chart-pie-demo.js' %}"></script>
 
     <script src="https://kit.fontawesome.com/cc85b1e5d3.js" crossorigin="anonymous"></script>
+    {% comment %} CK EDITOR {% endcomment %}
+    <script src="https://cdn.ckeditor.com/ckeditor5/4.24.0/classic/ckeditor.js"></script>
+
 </body>
 </html>
