--- a/admin_panel/templates/admin_panel/list-page.html
+++ b/admin_panel/templates/admin_panel/list-page.html
@@ -3,7 +3,7 @@
 {% block body %} 
 
 <div class="container">
-    <h2>Pages List</h2>
+    <h2>All Pages List</h2>
     <a class="btn btn-primary" style="margin-left: 85%;" href="{% url 'add-page' %}"> <i class="fa-solid fa-plus"></i>Add Page</a>
       <table class="table table-hover">
         <thead>
@@ -27,7 +27,7 @@
                     </a>
                 </td>
                 <td class="text-center" >
-                    <a href="{% url 'delete-page' i.pk %}"><i class="fas fa-edit"></i>
+                    <a href="{% url 'delete-page' i.pk %}"><i class="fa-trash-alt"></i>
                     </a>
                 </td>
             </tr>  
