--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -312,39 +312,14 @@
 				<div class="row">
 					<div class="col-lg-12 col-12">
 						<div class="owl-carousel portfolio-slider">
+						{% for i in pages %}	
 							<div class="single-pf">
-								<img src="{% static "img/pf1.jpg" %}" alt="#">
-								<a href="portfolio-details.html" class="btn">View Details</a>
-							</div>
-							<div class="single-pf">
-								<img src="{% static "img/pf2.jpg" %}" alt="#">
-								<a href="portfolio-details.html" class="btn">View Details</a>
-							</div>
-							<div class="single-pf">
-								<img src="{% static "img/pf3.jpg" %}" alt="#">
-								<a href="portfolio-details.html" class="btn">View Details</a>
-							</div>
-							<div class="single-pf">
-								<img src="{% static "img/pf4.jpg" %}" alt="#">
-								<a href="portfolio-details.html" class="btn">View Details</a>
-							</div>
-							<div class="single-pf">
-								<img src="{% static "img/pf1.jpg" %}" alt="#">
-								<a href="portfolio-details.html" class="btn">View Details</a>
-							</div>
-							<div class="single-pf">
-								<img src="{% static "img/pf2.jpg" %}" alt="#">
-								<a href="portfolio-details.html" class="btn">View Details</a>
-							</div>
-							<div class="single-pf">
-								<img src="{% static "img/pf3.jpg" %}" alt="#">
-								<a href="portfolio-details.html" class="btn">View Details</a>
-							</div>
-							<div class="single-pf">
-								<img src="{% static "img/pf4.jpg" %}" alt="#">
-								<a href="portfolio-details.html" class="btn">View Details</a>
-							</div>
-						</div>
+								<img style="width:350px; height:220px" src="/media/{{i.image}}" alt="#">
+								<a href="treatment/{{i.url}}" class="btn">{{i.title}}</a>
+								<p>{{i.discription | truncatewords:18}}</p>
+							</div>						
+						{% endfor %}	
+					</div>
 					</div>
 				</div>
 			</div>
@@ -534,5 +509,6 @@
 		
 {% endfor %}	
 		
+
 
 {% endblock %}
