--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -78,9 +78,11 @@
 										<i class="fa fa-ambulance"></i>
 									</div>
 									<div class="single-content">
-										<span>Lorem Amet</span>
-										<h4>Emergency Cases</h4>
-										<p>Lorem ipsum sit amet consectetur adipiscing elit. Vivamus et erat in lacus convallis sodales.</p>
+										<span>{{i.doctor_name_1}}</span>
+										<h4>{{i.title_1}}</h4>
+										<p>{{i.discription_1}}</p>
+										<p>{{i.working_day_from_1}} - {{i.working_day_to_1}}</p>
+										<p>{{i.working_hour_from_1}} - {{i.working_hour_to_1}}</p>
 										<a href="#">LEARN MORE<i class="fa fa-long-arrow-right"></i></a>
 									</div>
 								</div>
@@ -94,9 +96,11 @@
 										<i class="icofont-prescription"></i>
 									</div>
 									<div class="single-content">
-										<span>Fusce Porttitor</span>
-										<h4>Doctors Timetable</h4>
-										<p>Lorem ipsum sit amet consectetur adipiscing elit. Vivamus et erat in lacus convallis sodales.</p>
+										<span>{{i.doctor_name_2}}</span>
+										<h4>{{i.title_2}}</h4>
+										<p>{{i.discription_2}}</p>
+										<p>{{i.working_day_from_2}} - {{i.working_day_to_2}}</p>
+										<p>{{i.working_hour_from_2}} - {{i.working_hour_to_2}}</p>
 										<a href="#">LEARN MORE<i class="fa fa-long-arrow-right"></i></a>
 									</div>
 								</div>
@@ -110,13 +114,11 @@
 										<i class="icofont-ui-clock"></i>
 									</div>
 									<div class="single-content">
-										<span>Donec luctus</span>
-										<h4>Opening Hours</h4>
-										<ul class="time-sidual">
-											<li class="day">Monday - Fridayp <span>8.00-20.00</span></li>
-											<li class="day">Saturday <span>9.00-18.30</span></li>
-											<li class="day">Monday - Thusday <span>9.00-15.00</span></li>
-										</ul>
+										<span>{{i.doctor_name_3}}</span>
+										<h4>{{i.title_3}}</h4>
+										<p>{{i.discription_3}}</p>
+										<p>{{i.working_day_from_3}} - {{i.working_day_to_3}}</p>
+										<p>{{i.working_hour_from_3}} - {{i.working_hour_to_3}}</p>
 										<a href="#">LEARN MORE<i class="fa fa-long-arrow-right"></i></a>
 									</div>
 								</div>
