--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -127,33 +127,33 @@
 {% endblock %}
 
 
-
+	
 		<!-- Footer Area -->
 		<footer id="footer" class="footer ">
 			<!-- Footer Top -->
 			<div class="footer-top">
 				<div class="container">
 					<div class="row">
-						<div class="col-lg-3 col-md-6 col-12">
+						<div class="col-lg-4 col-md-6 col-12">
 							<div class="single-footer">
 								<h2>About Us</h2>
 								<p>Lorem ipsum dolor sit am consectetur adipisicing elit do eiusmod tempor incididunt ut labore dolore magna.</p>
 								<!-- Social -->
 								<ul class="social">
-									<li><a href="#"><i class="icofont-facebook"></i></a></li>
+									<li><a href="#" ><i class="icofont-facebook"></i></a></li>
 									<li><a href="#"><i class="icofont-google-plus"></i></a></li>
 									<li><a href="#"><i class="icofont-twitter"></i></a></li>
-									<li><a href="#"><i class="icofont-vimeo"></i></a></li>
+									<li><a href="#"><i class="icofont-linkedin"></i></a></li>
 									<li><a href="#"><i class="icofont-pinterest"></i></a></li>
 								</ul>
 								<!-- End Social -->
 							</div>
 						</div>
-						<div class="col-lg-3 col-md-6 col-12">
+						<div class="col-lg-4 col-md-6 col-12">
 							<div class="single-footer f-link">
 								<h2>Quick Links</h2>
 								<div class="row">
-									<div class="col-lg-6 col-md-6 col-12">
+									<div class="col-lg-4 col-md-6 col-12">
 										<ul>
 											<li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>Home</a></li>
 											<li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>About Us</a></li>
@@ -162,7 +162,7 @@
 											<li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>Other Links</a></li>	
 										</ul>
 									</div>
-									<div class="col-lg-6 col-md-6 col-12">
+									<div class="col-lg-5 col-md-6 col-12">
 										<ul>
 											<li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>Consuling</a></li>
 											<li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>Finance</a></li>
@@ -174,18 +174,8 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-lg-3 col-md-6 col-12">
-							<div class="single-footer">
-								<h2>Open Hours</h2>
-								<p>Lorem ipsum dolor sit ame consectetur adipisicing elit do eiusmod tempor incididunt.</p>
-								<ul class="time-sidual">
-									<li class="day">Monday - Fridayp <span>8.00-20.00</span></li>
-									<li class="day">Saturday <span>9.00-18.30</span></li>
-									<li class="day">Monday - Thusday <span>9.00-15.00</span></li>
-								</ul>
-							</div>
-						</div>
-						<div class="col-lg-3 col-md-6 col-12">
+	
+						<div class="col-lg-4 col-md-6 col-12">
 							<div class="single-footer">
 								<h2>Newsletter</h2>
 								<p>subscribe to our newsletter to get allour news in your inbox.. Lorem ipsum dolor sit amet, consectetur adipisicing elit,</p>
@@ -206,7 +196,7 @@
 					<div class="row">
 						<div class="col-lg-12 col-md-12 col-12">
 							<div class="copyright-content">
-								<p>© Copyright 2018  |  All Rights Reserved by <a href="https://www.wpthemesgrid.com" target="_blank">MediPlus</a> </p>
+								<p>© Copyright 2018  |  All Rights Reserved by <a href="/" target="_blank">MediPlus</a> </p>
 							</div>
 						</div>
 					</div>
@@ -214,7 +204,6 @@
 			</div>
 			<!--/ End Copyright -->
 		</footer>
-		<!--/ End Footer Area -->
 		
 		<!-- jquery Min JS -->
         <script src="{% static 'js/jquery.min.js' %}"></script>
@@ -256,9 +245,6 @@
 		<script src="{% static 'js/bootstrap.min.js' %}"></script>
 		<!-- Main JS -->
 		<script src="{% static 'js/main.js' %}"></script>
-
-
-
 
 </body>
 </html>
