Slider - All ok

--- a/admin_panel/templates/admin_panel/list.html
+++ b/admin_panel/templates/admin_panel/list.html
@@ -16,6 +16,22 @@
         <tr>
             <td>{{i.title}}</td>
             <td>{{i.discription | truncatewords:5}}</td>
+        <tr class="bg-secondary text-white">
+            <th>Slider Heading</th>
+            <th>Disc</th>
+            <th></th>
+        </tr>
+        <tr>
+            <td>{{i.heading_slider_1}}</td>
+            <td>{{i.text_slider_1 | truncatewords:5}}</td>
+        </tr>
+        <tr>
+            <td>{{i.heading_slider_2}}</td>
+            <td>{{i.text_slider_2 | truncatewords:5}}</td>
+        </tr>
+        <tr>
+            <td>{{i.heading_slider_3}}</td>
+            <td>{{i.text_slider_3 | truncatewords:5}}</td>
         </tr>
         <tr class="bg-secondary text-white">
             <th>Featured Batch Title</th>
