--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -13,10 +13,10 @@
 						<div class="row">
 							<div class="col-lg-7">
 								<div class="text">
-									<h1>We Provide <span>Medical</span> Services That You Can <span>Trust!</span></h1>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sed nisl pellentesque, faucibus libero eu, gravida quam. </p>
+									<h1>{{i.heading_slider_1}}</h1>
+									<p>{{i.text_slider_1}} </p>
 									<div class="button">
-										<a href="#" class="btn">Get Appointment</a>
+										<a href="{% url 'appointment' %}" class="btn">Get Appointment</a>
 										<a href="#" class="btn primary">Learn More</a>
 									</div>
 								</div>
@@ -31,10 +31,10 @@
 						<div class="row">
 							<div class="col-lg-7">
 								<div class="text">
-									<h1>We Provide <span>Medical</span> Services That You Can <span>Trust!</span></h1>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sed nisl pellentesque, faucibus libero eu, gravida quam. </p>
+									<h1>{{i.heading_slider_2}}</h1>
+									<p>{{i.text_slider_2}} </p>
 									<div class="button">
-										<a href="#" class="btn">Get Appointment</a>
+										<a href="{% url 'appointment' %}" class="btn">Get Appointment</a>
 										<a href="#" class="btn primary">About Us</a>
 									</div>
 								</div>
@@ -49,10 +49,10 @@
 						<div class="row">
 							<div class="col-lg-7">
 								<div class="text">
-									<h1>We Provide <span>Medical</span> Services That You Can <span>Trust!</span></h1>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sed nisl pellentesque, faucibus libero eu, gravida quam. </p>
+									<h1>{{i.heading_slider_3}}</h1>
+									<p>{{i.text_slider_3}} </p>
 									<div class="button">
-										<a href="#" class="btn">Get Appointment</a>
+										<a href="{% url 'appointment' %}" class="btn">Get Appointment</a>
 										<a href="#" class="btn primary">Conatct Now</a>
 									</div>
 								</div>
